# sbom-workshop

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh  postStartCommand.sh  pyproject.toml
.devcontainer/go/: go.mod  hello_world  hello_world.go
.devcontainer/python/: requirements.txt
.devcontainer/rust/: Cargo.toml
.devcontainer/rust/src/: main.rs
docs/: objectives.md  setup.md  troubleshooting.md
docs/challenges/: go_runtime_sbom.md  index.md  java_runtime_sbom.md  notes.md  python_near_runtime_sbom.md  python_static_sbom.md  rust_runtime_sbom.md  sbom_with_osv.md
docs/lectures/: how_to_create_sbom.md  lockfile_101.md  osv_101.md  sbom_101.md  why_runtime_sbom_is_better.md
sbom_workshop/: cli.py  cyclonedx.py
sbom_workshop/go/: __init__.py  build_info.py
sbom_workshop/java/: gradle.py  jar.py
sbom_workshop/python/: requirements.py  site_packages.py
sbom_workshop/rust/: __init__.py  audit_data.py
tests/java/: test_gradle.py  test_jar.py
tests/python/: test_requirements.py  test_site_packages.py
