[tool.poetry]
name = "sbom_workshop"
version = "0.1.0"
description = ""
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cyclonedx-python-lib = ">=4.0,<5.0"
loguru = ">=0.7,<1.0"
packageurl-python = ">=0.11,<1.0"
pip-audit = ">=2.5,<3.0"
psutil = ">=5.9,<6.0"
pyelftools = ">=0.29,<1.0"
pyparsing = ">=3.0,<4.0"
sh = ">=2.0,<3.0"
typer = ">=0.7,<1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3"
flake8 = "^6.0"
mypy = "^1.2"
pre-commit = "^3.2"
pycodestyle = "^2.10"
pytest = "^7.3"
types-setuptools = "^67.7"
vcrpy = "^4.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sbom-workshop-cli = "sbom_workshop.cli:app"
